--- a/tour/src/app/globals.css
+++ b/tour/src/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #eb1818;
+    /* --background: #eb1818; */
     --foreground: #ededed;
   }
 }
@@ -22,7 +22,7 @@ body {
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  /* background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
